--- a/output/posts.html
+++ b/output/posts.html
@@ -31,6 +31,12 @@
 <li><a href="posts/tables/tables.html">Formatting tables using Tufte-Blog.</a></li>
 </ul>
 </section>
+<section class="level2" id="noethers-theorem">
+<h2>Noether’s theorem</h2>
+</section>
+<section class="level2" id="blog-on-natural-gradients-and-mirror-descent">
+<h2>Blog on Natural Gradients and Mirror Descent</h2>
+</section>
 </section>
 </article>
 <footer>
