--- a/output/index.html
+++ b/output/index.html
@@ -21,9 +21,9 @@
 </nav>
 </header>
 <article>
-<section class="level3" id="hi">
-<h3>Hi</h3>
-<p>Hi my name is kartik.</p>
+<section class="level3" id="about-me">
+<h3>About Me</h3>
+<p>Hi, I am Kartik, I am a bachelor’s student at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I work on Reinforcement Learning and Optimization.</p>
 </section>
 </article>
 <footer>
