--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>posts</title>
-<base href="https://thatskartik.github.io" target="_self"/>
+<base href="file:///home/arkartik/Website/thatskartik.github.io/output/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -30,6 +30,12 @@
 <li><a href="posts/tufte/tufte.html">Reproduction of the Tufte CSS example page.</a></li>
 <li><a href="posts/tables/tables.html">Formatting tables using Tufte-Blog.</a></li>
 </ul>
+</section>
+<section class="level2" id="noethers-theorem">
+<h2>Noether’s theorem</h2>
+</section>
+<section class="level2" id="blog-on-natural-gradients-and-mirror-descent">
+<h2>Blog on Natural Gradients and Mirror Descent</h2>
 </section>
 </section>
 </article>
