Make couple changes

--- a/output/posts.html
+++ b/output/posts.html
@@ -23,20 +23,19 @@
 <article>
 <section class="level1" id="posts">
 <h1>Posts</h1>
-<section class="level2" id="tufte-blog-examples">
-<h2>Tufte Blog Examples</h2>
-<p>These example pages show the various kinds of features supported by Tufte-Blog. See <a href="http://github.com/adityaramesh/tufte-blog/tree/master/posts">the Markdown sources</a> for these examples to learn what to type in order to render a given element.</p>
+<!-- ## Tufte Blog Examples
+
+These example pages show the various kinds of features supported by Tufte-Blog. See [the Markdown
+sources][sources] for these examples to learn what to type in order to render a given element.
+
+- [Reproduction of the Tufte CSS example page.](output/posts/tufte/tufte.html)
+- [Formatting tables using Tufte-Blog.](output/posts/tables/tables.html)
+
+[sources]: http://github.com/adityaramesh/tufte-blog/tree/master/posts
+ -->
 <ul>
-<li><a href="posts/tufte/tufte.html">Reproduction of the Tufte CSS example page.</a></li>
-<li><a href="posts/tables/tables.html">Formatting tables using Tufte-Blog.</a></li>
+<li><a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
 </ul>
-</section>
-<section class="level2" id="noethers-theorem">
-<h2>Noether’s theorem</h2>
-</section>
-<section class="level2" id="blog-on-natural-gradients-and-mirror-descent">
-<h2>Blog on Natural Gradients and Mirror Descent</h2>
-</section>
 </section>
 </article>
 <footer>
