--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>index</title>
-<base href="." target="_self"/>
+<base href="file:///home/arkartik/Website/thatskartik.github.io/output/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -23,7 +23,7 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>Hi, I am Kartik, I am a bachelor’s student at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I work on Reinforcement Learning and Optimization.</p>
+<p>Hi, I am Kartik, I am a bachelor’s student at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I enjoy studing theoretical machine learning.</p>
 </section>
 </article>
 <footer>
