--- a/output/posts.html
+++ b/output/posts.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>contact</title>
-<base href="file:///home/arkartik/Website/thatskartik.github.io/" target="_self"/>
+<title>posts</title>
+<base href="file:///home/arkartik/Website/thatskartik.github.io/output/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -21,9 +21,21 @@
 </nav>
 </header>
 <article>
-<section class="level1" id="contact">
-<h1>Contact</h1>
-<p><a href="https://twitter.com/model_mechanic">Find me on Twitter here</a> or reach me by email at <code>_@adityaramesh.com</code>.</p>
+<section class="level1" id="posts">
+<h1>Posts</h1>
+<!-- ## Tufte Blog Examples
+
+These example pages show the various kinds of features supported by Tufte-Blog. See [the Markdown
+sources][sources] for these examples to learn what to type in order to render a given element.
+
+- [Reproduction of the Tufte CSS example page.](output/posts/tufte/tufte.html)
+- [Formatting tables using Tufte-Blog.](output/posts/tables/tables.html)
+
+[sources]: http://github.com/adityaramesh/tufte-blog/tree/master/posts
+ -->
+<ul>
+<li><a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
+</ul>
 </section>
 </article>
 <footer>
