Add short changes

--- a/output/contact.html
+++ b/output/contact.html
@@ -23,7 +23,7 @@
 <article>
 <section class="level1" id="contact">
 <h1>Contact</h1>
-<p><a href="https://twitter.com/model_mechanic">Find me on Twitter here</a> or reach me by email at <code>_@adityaramesh.com</code>.</p>
+<p><a href="https://twitter.com/srinivas_kartik">Find me on Twitter here</a> or reach me by email at <code>arkartik@student.ubc.ca</code> or <code>kartiksrinivas007@gmail.com</code></p>
 </section>
 </article>
 <footer>
