--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>contact</title>
-<base href="file:///home/arkartik/Website/thatskartik.github.io/" target="_self"/>
+<base href="./" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
