--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>contact</title>
-<base href="./" target="_self"/>
+<base href="http://thatskartik.github.io/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -23,7 +23,7 @@
 <article>
 <section class="level1" id="contact">
 <h1>Contact</h1>
-<p><a href="https://twitter.com/model_mechanic">Find me on Twitter here</a> or reach me by email at <code>_@adityaramesh.com</code>.</p>
+<p><a href="https://twitter.com/srinivas_kartik">Find me on Twitter here</a> or reach me by email at <code>arkartik@student.ubc.ca</code> or <code>kartiksrinivas007@gmail.com</code></p>
 </section>
 </article>
 <footer>
