--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>index</title>
-<base href="./" target="_self"/>
+<base href="http://thatskartik.github.io/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -23,8 +23,9 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>Hi, I am Kartik, I am a bachelor’s student at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I enjoy studing theoretical machine learning.</p>
+<p>Hi, I am Kartik, I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I like studying applied mathematics and am always on the lookout for elegant solutions to hard problems, or strong generalizations of simple problems<label class="margin-toggle sidenote-number" for="sidenote-1"></label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="sidenote">See the <a href="https://math.stackexchange.com/questions/693687/proof-of-the-moreau-decomposition-property-of-proximal-operators">Moreau Decomposition</a></span> <label class="margin-toggle sidenote-number" for="sidenote-2"></label><input class="margin-toggle" id="sidenote-2" type="checkbox"/><span class="sidenote">Against common perception, I have a life outside of mathematics. I play basektball, swim and love to hike and cook.</span>.</p>
 </section>
+
 </article>
 <footer>
 <hr/>
