--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>index</title>
-<base href="http://thatskartik.github.io/" target="_self"/>
+<base href="https://thatskartik.github.io/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
