--- a/posts.html
+++ b/posts.html
@@ -23,6 +23,7 @@
 <article>
 <section class="level1" id="posts">
 <h1>Posts</h1>
+<!-- Nothing here yet, will post something on Convex Optimization soon! -->
 <!-- ## Tufte Blog Examples
 
 These example pages show the various kinds of features supported by Tufte-Blog. See [the Markdown
@@ -34,7 +35,7 @@ sources][sources] for these examples to learn what to type in order to render a 
 [sources]: http://github.com/adityaramesh/tufte-blog/tree/master/posts
  -->
 <ul>
-<li><a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
+<li>(Still in progress) - <a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
 </ul>
 </section>
 </article>
