--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>Hi, I am Kartik, I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I like studying applied mathematics. Recently, I have been studying Optimization.</p>
+<p>Hi, I am Kartik, I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I am also affiliated with the <a href="https://ai.iith.ac.in/">Department of Artificial Intelligence</a> and the <a href="https://es.iith.ac.in/">Department of Engineering Sciences</a> at IIT Hyderabad.</p>
+<p>During my undergraduate study, I have been fortunate to be advised by <a href="https://people.iith.ac.in/vineethnb/">Dr.Vineeth Balasubramanian</a>, <a href="https://people.iith.ac.in/saketha/">Dr. J Saketha Nath</a> and <a href="https://people.iith.ac.in/m_vidyasagar/index.html">Dr. Muthukumalli Vidyasagar</a></p>
+</section>
+<section class="level3" id="news">
+<h3>News</h3>
+<ul>
+<li>(May 2024) My <a href="https://icml.cc/virtual/2024/poster/33176">paper</a> during my internship at the <a href="https://tea.ece.ubc.ca/">TEA lab at UBC</a>, was accepted to ICML 2024!</li>
+<li>(Feb 2024) I have been accepted to Carnegie Mellon University for a Master’s Degree in Machine Learning!</li>
+</ul>
 </section>
 </article>
 <footer>
