--- a/output/contact.html
+++ b/output/contact.html
@@ -18,12 +18,13 @@
 <nav>
 <a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
+<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
 <section class="level1" id="contact">
 <h1>Contact</h1>
-<p><a href="https://twitter.com/srinivas_kartik">Find me on Twitter here</a> or reach me by email at <code>arkartik@student.ubc.ca</code> or <code>kartiksrinivas007@gmail.com</code></p>
+<p><a href="https://twitter.com/srinivas_kartik">Find me on Twitter here</a> or reach me by email at <code>kartiksr@andrew.cmu.edu</code> or <code>kartiksrinivas007@gmail.com</code></p>
 </section>
 </article>
 <footer>
