--- a/output/posts.html
+++ b/output/posts.html
@@ -18,6 +18,7 @@
 <nav>
 <a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
+<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
