--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>Hi, I am Kartik. I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>.<label class="margin-toggle sidenote-number" for="sidenote-1"></label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="sidenote">Prior to joining the CSE department, I spent 1.5 years in the <a href="https://es.iith.ac.in/">Department of Engineering Sciences</a>, where I also took courses in Physics, Mechanical and Electrical Engineering.</span> I am fortunate to be advised by <a href="https://people.iith.ac.in/vineethnb/index.html">Dr.Vineeth N Balasubramanian</a>, <a href="https://people.iith.ac.in/saketha/">Dr. J Saketha Nath</a> and <a href="https://people.iith.ac.in/m_vidyasagar/index.html">Dr. Muthukamalli Vidyasagar</a>.</p>
+<p>Hi, I am Kartik. I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I am fortunate to be advised by <a href="https://people.iith.ac.in/vineethnb/index.html">Dr.Vineeth N Balasubramanian</a>, <a href="https://people.iith.ac.in/saketha/">Dr. J Saketha Nath</a> and <a href="https://people.iith.ac.in/m_vidyasagar/index.html">Dr. Muthukamalli Vidyasagar</a>.</p>
 </section>
-<section class="level3" id="news">
-<h3>News</h3>
-<ul>
-<li>(May 2024) My <a href="https://icml.cc/virtual/2024/poster/33176">paper</a> during my internship at the <a href="https://tea.ece.ubc.ca/">TEA lab at UBC</a>, was accepted to ICML 2024!</li>
-<li>(May 2024) Completed my Bachelor’s Degree with Honors!</li>
-<li>(Feb 2024) I have been accepted to Carnegie Mellon University for a Master’s Degree in Machine Learning!</li>
-</ul>
+<section class="level3" id="research">
+<h3>Research</h3>
+<p>Broadly, I take an interest in theoretical Machine Learning. Specifically, I take an interest in using techniques from Learning theory and statsitics to prove guarantees on the robustness/privacy of ML models. I am presenty working on <a href="https://en.wikipedia.org/wiki/Stochastic_approximation">certain classes of problems</a> in Optimization.</p>
 </section>
-
+<section class="level3" id="publications">
+<h3>Publications</h3>
+<ol type="1">
+<li>Overcoming Data and Model Heterogeneities in Decentralized Federated Learning via Synthetic Anchors <br/> ICML 2024 - <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <br/><i>CY Huang, <b>Kartik Srinivas</b>, Xin Zhang, Xiaoxiao Li</i></li>
+</ol>
+</section>
 </article>
 <footer>
 <hr/>
