--- a/output/posts.html
+++ b/output/posts.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>posts</title>
+<meta content="Kartik Srinivas" name="author"/>
+<title>Posts</title>
 <base href="file:///home/arkartik/Website/thatskartik.github.io/output/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
@@ -41,6 +42,7 @@ sources][sources] for these examples to learn what to type in order to render a 
 <li>(Still in progress) - <a href="posts/tmux/tmux.html">Tmux quick tips</a></li>
 <li>(Still in progress) - <a href="posts/vim/vim.html">Vim quick tips</a></li>
 <li>(Still in progress) - <a href="posts/HTSI/HTSI.html">How to Solve it</a></li>
+<li><a href="posts/Summer_of_MLP/pytorch_tech.html">Technicalities in Pytorch</a></li>
 </ul>
 </section>
 </article>
