--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>posts</title>
+<meta content="Kartik Srinivas" name="author"/>
+<title>Posts</title>
 <base href="https://thatskartik.github.io/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
@@ -16,6 +17,7 @@
 <body>
 <header>
 <nav>
+<a href="pub.html">Research</a>
 <a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
 <a href="index.html">Home</a>
@@ -39,6 +41,8 @@ sources][sources] for these examples to learn what to type in order to render a 
 <li>(Still in progress) - <a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
 <li>(Still in progress) - <a href="posts/tmux/tmux.html">Tmux quick tips</a></li>
 <li>(Still in progress) - <a href="posts/vim/vim.html">Vim quick tips</a></li>
+<li>(Still in progress) - <a href="posts/HTSI/HTSI.html">How to Solve it</a></li>
+<li><a href="posts/Summer_of_MLP/pytorch_tech.html">Technicalities in Pytorch</a></li>
 </ul>
 </section>
 </article>
