--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>index</title>
+<meta content="Kartik Srinivas" name="author"/>
+<title>Kartik</title>
 <base href="https://thatskartik.github.io/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
@@ -16,26 +17,18 @@
 <body>
 <header>
 <nav>
+<a href="pub.html">Research</a>
 <a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
 <a href="index.html">Home</a>
 </nav>
 </header>
 <article>
-<section class="level3" id="about-me">
-<h3>About Me</h3>
-<p>Hi, I am Kartik. I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. I am fortunate to be advised by <a href="https://people.iith.ac.in/vineethnb/index.html">Dr.Vineeth N Balasubramanian</a>, <a href="https://people.iith.ac.in/saketha/">Dr. J Saketha Nath</a> and <a href="https://people.iith.ac.in/m_vidyasagar/index.html">Dr. Muthukamalli Vidyasagar</a>.</p>
+<section class="level1" id="about-me">
+<h1>About Me</h1>
+<p>I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. <label class="margin-toggle" for="sidenote-1">⊕</label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="marginnote"><img alt="Image" src="posts/HTSI/images/Gbmid.jpg"/> Midway during the <a href="https://bcparks.ca/garibaldi-park/">Garibaldi Hike</a></span> Please find my CV <a href="posts/HTSI/images/Research_Resume.pdf">here</a></p>
 </section>
-<section class="level3" id="research">
-<h3>Research</h3>
-<p>Broadly, I take an interest in theoretical Machine Learning. Specifically, I take an interest in using techniques from Learning theory and statsitics to prove guarantees on the robustness/privacy of ML models. I am presenty working on <a href="https://en.wikipedia.org/wiki/Stochastic_approximation">certain classes of problems</a> in Optimization.</p>
-</section>
-<section class="level3" id="publications">
-<h3>Publications</h3>
-<ol type="1">
-<li>Overcoming Data and Model Heterogeneities in Decentralized Federated Learning via Synthetic Anchors <br/> ICML 2024 - <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <br/><i>CY Huang, <b>Kartik Srinivas</b>, Xin Zhang, Xiaoxiao Li</i></li>
-</ol>
-</section>
+
 </article>
 <footer>
 <hr/>
