--- a/output/pub.html
+++ b/output/pub.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>pub</title>
-<base href="https://thatskartik.github.io/" target="_self"/>
+<base href="file:///home/arkartik/Website/thatskartik.github.io/output/" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -17,7 +17,6 @@
 <header>
 <nav>
 <a href="pub.html">Research</a>
-<a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
 <a href="index.html">Home</a>
 </nav>
@@ -25,9 +24,9 @@
 <article>
 <section class="level3" id="publications">
 <h3>Publications</h3>
-<ol type="1">
+<ul>
 <li>Overcoming Data and Model Heterogeneities in Decentralized Federated Learning via Synthetic Anchors <br/> ICML 2024 - <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <br/><i>CY Huang, <b>Kartik Srinivas</b>, Xin Zhang, Xiaoxiao Li</i></li>
-</ol>
+</ul>
 </section>
 </article>
 <footer>
