--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <header>
 <nav>
 <a href="pub.html">Research</a>
-<a href="contact.html">Contact</a>
 <a href="posts.html">Posts</a>
 <a href="index.html">Home</a>
 </nav>
@@ -26,7 +25,8 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. <label class="margin-toggle" for="sidenote-1">⊕</label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="marginnote"><img alt="Image" src="posts/HTSI/images/Gbmid.jpg"/> Midway during the <a href="https://bcparks.ca/garibaldi-park/">Garibaldi Hike</a></span> Please find my CV <a href="posts/HTSI/images/Research_Resume.pdf">here</a></p>
+<p>I am a senior at the <a href="https://cse.iith.ac.in/">Department of Computer Science and Engineering at IIT-Hyderabad</a>. <label class="margin-toggle" for="sidenote-1">⊕</label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="marginnote"><img alt="Image" src="posts/HTSI/images/Gbmid.jpg"/> Midway during the <a href="https://bcparks.ca/garibaldi-park/">Garibaldi Hike</a></span> Please find my CV <a href="posts/HTSI/images/Research_Resume.pdf">here</a>.</p>
+<p>If you wish to contact me, please email me at <code>kartiksr [at] andrew.cmu.edu</code></p>
 </section>
 
 </article>
