--- a/output/posts.html
+++ b/output/posts.html
@@ -25,8 +25,8 @@
 <article>
 <section class="level3" id="posts">
 <h3>Posts</h3>
-<!-- Nothing here yet, will post something on Convex Optimization soon! -->
-<!-- ## Tufte Blog Examples
+<ul>
+<li><a href="posts/HTSI/HTSI.html">How to Solve it</a> <!-- Nothing here yet, will post something on Convex Optimization soon! --> <!-- ## Tufte Blog Examples
 
 These example pages show the various kinds of features supported by Tufte-Blog. See [the Markdown
 sources][sources] for these examples to learn what to type in order to render a given element.
@@ -35,14 +35,14 @@ sources][sources] for these examples to learn what to type in order to render a 
 - [Formatting tables using Tufte-Blog.](output/posts/tables/tables.html)
 
 [sources]: http://github.com/adityaramesh/tufte-blog/tree/master/posts
- -->
-<ul>
-<li>(Still in progress) - <a href="posts/convex/convex.html">Beautiful results in Convex Optimization</a></li>
-<li>(Still in progress) - <a href="posts/tmux/tmux.html">Tmux quick tips</a></li>
-<li>(Still in progress) - <a href="posts/vim/vim.html">Vim quick tips</a></li>
-<li>(Still in progress) - <a href="posts/HTSI/HTSI.html">How to Solve it</a></li>
-<li><a href="posts/Summer_of_MLP/pytorch_tech.html">Technicalities in Pytorch</a></li>
+ --></li>
 </ul>
+<!--
+- (Still in progress) - [Tmux quick tips](posts/tmux/tmux.html)
+- (Still in progress) - [Vim quick tips](posts/vim/vim.html)
+- [How to Solve it](posts/HTSI/HTSI.html)
+- [Technicalities in Pytorch](posts/Summer_of_MLP/pytorch_tech.html)
+-->
 </section>
 </article>
 <footer>
