Reshape file order

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>contact</title>
-<base href="https://thatskartik.github.io/" target="_self"/>
+<base href="https://thatskartik.github.io" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -16,15 +16,15 @@
 <body>
 <header>
 <nav>
+<a href="index.html">About Me</a>
 <a href="pub.html">Research</a>
 <a href="posts.html">Posts</a>
-<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
-<section class="level3" id="contact">
-<h3>Contact</h3>
-<p><a href="https://twitter.com/srinivas_kartik">Find me on Twitter here</a> or reach me by email at <code>kartiksr@andrew.cmu.edu</code> or <code>kartiksrinivas007@gmail.com</code></p>
+<section class="level1" id="contact">
+<h1>Contact</h1>
+<p><a href="https://twitter.com/model_mechanic">Find me on Twitter here</a> or reach me by email at <code>_@adityaramesh.com</code>.</p>
 </section>
 </article>
 <footer>
