--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta content="Kartik Srinivas" name="author"/>
 <title>Kartik</title>
-<base href="https://thatskartik.github.io/" target="_self"/>
+<base href="https://thatskartik.github.io" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -17,17 +16,16 @@
 <body>
 <header>
 <nav>
+<a href="index.html">About Me</a>
 <a href="pub.html">Research</a>
 <a href="posts.html">Posts</a>
-<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>I am a senior @ <a href="https://cse.iith.ac.in/">CSE IIT-Hyderabad</a>. <label class="margin-toggle" for="sidenote-1">⊕</label><input class="margin-toggle" id="sidenote-1" type="checkbox"/><span class="marginnote"><img alt="Image" src="posts/HTSI/images/Gbmid.jpg"/> Midway during the <a href="https://bcparks.ca/garibaldi-park/">Garibaldi Hike</a></span> Please find my CV <a href="posts/HTSI/images/Research_Resume.pdf">here</a>. If you wish to contact me, please email me at <code>kartiksr [at] andrew.cmu.edu</code></p>
+<p>I am a senior @ <a href="https://cse.iith.ac.in/">CSE IIT Hyderabad</a><br/> Please find my CV <a href="posts/CSES/assets/Research_Resume.pdf">here</a></p>
 </section>
-
 </article>
 <footer>
 <hr/>
