--- a/posts.html
+++ b/posts.html
@@ -3,9 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta content="Kartik Srinivas" name="author"/>
-<title>Posts</title>
-<base href="https://thatskartik.github.io/" target="_self"/>
+<title>posts</title>
+<base href="https://thatskartik.github.io" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -17,32 +16,18 @@
 <body>
 <header>
 <nav>
+<a href="index.html">About Me</a>
 <a href="pub.html">Research</a>
 <a href="posts.html">Posts</a>
-<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
 <section class="level3" id="posts">
 <h3>Posts</h3>
+<hr/>
 <ul>
-<li><a href="posts/HTSI/HTSI.html">How to Solve it</a> <!-- Nothing here yet, will post something on Convex Optimization soon! --> <!-- ## Tufte Blog Examples
-
-These example pages show the various kinds of features supported by Tufte-Blog. See [the Markdown
-sources][sources] for these examples to learn what to type in order to render a given element.
-
-- [Reproduction of the Tufte CSS example page.](output/posts/tufte/tufte.html)
-- [Formatting tables using Tufte-Blog.](output/posts/tables/tables.html)
-
-[sources]: http://github.com/adityaramesh/tufte-blog/tree/master/posts
- --></li>
+<li><a href="posts/HTSI/HTSI.html">How to Solve It</a></li>
 </ul>
-<!--
-- (Still in progress) - [Tmux quick tips](posts/tmux/tmux.html)
-- (Still in progress) - [Vim quick tips](posts/vim/vim.html)
-- [How to Solve it](posts/HTSI/HTSI.html)
-- [Technicalities in Pytorch](posts/Summer_of_MLP/pytorch_tech.html)
--->
 </section>
 </article>
 <footer>
