--- a/pub.html
+++ b/pub.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>pub</title>
-<base href="https://thatskartik.github.io/" target="_self"/>
+<title>Research</title>
+<base href="https://thatskartik.github.io" target="_self"/>
 <link href="css/reset.css" rel="stylesheet"/>
 <link href="css/tufte.css" rel="stylesheet"/>
 <link href="css/latex.css" rel="stylesheet"/>
@@ -16,17 +16,21 @@
 <body>
 <header>
 <nav>
+<a href="index.html">About Me</a>
 <a href="pub.html">Research</a>
 <a href="posts.html">Posts</a>
-<a href="index.html">Home</a>
 </nav>
 </header>
 <article>
+<section class="level3" id="research">
+<h3>Research</h3>
+<hr/>
+<p>My research centers around using theoretical machine learning to prove guarantees on the robustness and privacy of Machine Learning Models.</p>
+</section>
 <section class="level3" id="publications">
 <h3>Publications</h3>
-<ul>
-<li>Overcoming Data and Model Heterogeneities in Decentralized Federated Learning via Synthetic Anchors <br/> ICML 2024 - <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <br/><i>CY Huang, <b>Kartik Srinivas</b>, Xin Zhang, Xiaoxiao Li</i></li>
-</ul>
+<hr/>
+<p>[Accepted ICML 2024] Overcoming Data and Model Heterogeneities using Decentralized Federated Learning. <br/> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a></p>
 </section>
 </article>
 <footer>
