--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>I am a senior @ <a href="https://cse.iith.ac.in/">CSE IIT Hyderabad</a><br/> Please find my CV <a href="posts/CSES/assets/Research_Resume.pdf">here</a></p>
+<p>I am a senior at <a href="https://cse.iith.ac.in/">IIT Hyderabad</a> studying Computer Science and Math.<br/> Please find my CV <a href="posts/CSES/assets/Research_Resume.pdf">here</a>.</p>
 </section>
 </article>
 <footer>
