--- a/pub.html
+++ b/pub.html
@@ -25,12 +25,12 @@
 <section class="level3" id="research">
 <h3>Research</h3>
 <hr/>
-<p>My research centers around using theoretical machine learning to prove guarantees on the robustness and privacy of Machine Learning Models.</p>
+<p>I am studying robustness and privacy of Machine Learning models. In addition to this, due to the wonderful courses at IIT-Hyderabad on Optimization, I have begun to explore that space too.</p>
 </section>
 <section class="level3" id="publications">
 <h3>Publications</h3>
 <hr/>
-<p>[Accepted ICML 2024] Overcoming Data and Model Heterogeneities using Decentralized Federated Learning. <br/> <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a></p>
+<p>[Accepted ICML 2024] Overcoming Data and Model Heterogeneities using Decentralized Federated Learning. <br/> Resources:- <a href="https://arxiv.org/abs/2405.11525">Arxiv</a> <a href="https://icml.cc/virtual/2024/poster/33176">Poster</a></p>
 </section>
 </article>
 <footer>
