--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <article>
 <section class="level3" id="about-me">
 <h3>About Me</h3>
-<p>I am a senior at <a href="https://cse.iith.ac.in/">IIT Hyderabad</a> studying Computer Science and Math.<br/>. Please find my CV <a href="posts/CSES/assets/Research_Resume.pdf">here</a>.</p>
+<p>I am an incoming MSML student at <a href="https://www.ml.cmu.edu/">Carnegie Mellon University</a>. I graduated at the top of my class with honors from the <a href="https://cse.iith.ac.in/">Department of Computer Science</a> at IIT Hyderabad.</p>
+<p>I studied under the guidance of <a href="https://people.iith.ac.in/vineethnb/index.html">Dr. Vineeth N Balasubramanian</a>.</p>
+<p>Please find my CV <a href="posts/CSES/assets/Research_Resume.pdf">here</a>.</p>
+<p>If you wish to contact me, please do so at <code>kartiksr [at] andrew.cmu.edu</code></p>
 </section>
 </article>
 <footer>
