--- a/pub.html
+++ b/pub.html
@@ -25,7 +25,7 @@
 <section class="level3" id="research">
 <h3>Research</h3>
 <hr/>
-<p>I am studying robustness and privacy of Machine Learning models. In addition to this, due to the wonderful courses at IIT-Hyderabad on Optimization, I have begun to explore that space too.</p>
+<p>I am studying robustness and privacy of Machine Learning models. In addition to this, due to the wonderful courses at IIT-Hyderabad on <a href="https://people.iith.ac.in/saketha/teaching/cs5660.html">Optimization</a>, I have begun to explore that space too.</p>
 </section>
 <section class="level3" id="publications">
 <h3>Publications</h3>
