--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <!-- saved from url=(0034)https://www.csa.iisc.ac.in/~chiru/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<style> body { font-family: Arial; } </style>
+<style> 
 
+/*
+ * I add this to html files generated with pandoc.
+ */
+
+html {
+  font-size: 100%;
+  overflow-y: scroll;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+body {
+  color: #000;
+  font-family: Arial, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
+  font-size: 120%;
+  line-height: 1.2;
+  padding: 1em;
+  margin: auto;
+  max-width: 42em;
+  background: #fefefe;
+}
+
+</style>
 <title>Kartik's homepage</title>
 </head>
 <body bgcolor="#ffffff"><center>
@@ -13,14 +36,13 @@ Kartik Srinivas
 
 
 <p><br> Master's Student <br>
-<a href="https://www.ml.cmu.edu/">Department of Machine Learning </a> <br> <a href="https://www.cmu.edu/"> Carnegie Mellon University </a> <br>
+<a href="https://www.ml.cmu.edu/">Department of Machine Learning </a> <br> <a href="https://www.cmu.edu/">Carnegie Mellon University </a> <br>
 
 Pittsburgh 15232<br> Pennsylvania, USA <br>
-<br><b>Email:</b> kartiksr AT andrew.cmu.edu <br>
-</p><p>
-<a href="./Research_Resume.pdf">Curriculum Vitae</a>
-</p>
+<br><b>Email:</b> kartiksr AT andrew.cmu.edu
+<br><b>CV:</b><a href="./Vita.pdf">Vita</a>
 
+<p> <b>Research Interests:</b> Statistics and Continuous Optimization </p>
 
 
 </center></body></html>
