Reshape file order

--- a/index.html
+++ b/index.html
@@ -1,48 +1,55 @@
+<!DOCTYPE html>
+<!-- saved from url=(0028)https://sara-fish.github.io/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Kartik Srinivas Personal Website.">
+<title>Kartik Srinivas • Personal Website</title><style>
+	body {
+		margin: 40px auto;
+		max-width: 700px;
+		line-height: 1.6;
+		font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-<!-- saved from url=(0034)https://www.csa.iisc.ac.in/~chiru/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		color: #444;
+		padding: 0 10px
+	}
 
-<style> 
+	h1,
+	h2,
+	h3 {
+		line-height: 1.2
+	}
 
-/*
- * I add this to html files generated with pandoc.
- */
+	@media (prefers-color-scheme: dark) {
+		body {
+			color: #c9d1d9;
+			background: #0d1117
+		}
 
-html {
-  font-size: 100%;
-  overflow-y: scroll;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
+		a:link {
+			color: #58a6ff
+		}
 
-body {
-  color: #000;
-  font-family: Arial, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
-  font-size: 120%;
-  line-height: 1.2;
-  padding: 1em;
-  margin: auto;
-  max-width: 42em;
-  background: #fefefe;
-}
-
-</style>
-<title>Kartik's homepage</title>
-</head>
-<body bgcolor="#ffffff"><center>
-<h4>
-Kartik Srinivas
-</h4>
-
-
-<p><br> Master's Student <br>
-<a href="https://www.ml.cmu.edu/">Department of Machine Learning </a> <br> <a href="https://www.cmu.edu/">Carnegie Mellon University </a> <br>
-
-Pittsburgh 15232<br> Pennsylvania, USA <br>
-<br><b>Email:</b> kartiksr AT andrew.cmu.edu
-<br><b>CV:</b><a href="./Vita.pdf">Vita</a>
-
-<p> <b>Research Interests:</b> Statistics and Continuous Optimization </p>
+		a:visited {
+			color: #8e96f0
+		}
+	}
+</style></head>
 
 
-</center></body></html>
+
+
+<!-- This style is copied from https://perfectmotherfuckingwebsite.com/      -->
+
+<body><h1>Kartik Srinivas</h1>
+
+I am a first year master's student in the <a href = "https://www.ml.cmu.edu/"> ML department </a>  at CMU. 
+Previously, I completed my B.Tech
+in Computer Science at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>. My research interests lie in Statistics and Optimization.
+<br>
+<br>
+My 1-page general resume: </a><a href="./Vita.pdf">Vita</a><br>
+Feel free to email me at kartiksr [at] andrew.cmu.edu 
+
+
+</body></html>
