--- a/index.html
+++ b/index.html
@@ -44,12 +44,21 @@
 <body><h1>Kartik Srinivas</h1>
 
 I am a first year master's student in the <a href = "https://www.ml.cmu.edu/"> ML department </a>  at CMU. 
-Previously, I completed my B.Tech
-in Computer Science at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>. My research interests lie in Statistics and Optimization.
+Previously, I was a student at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>. 
 <br>
 <br>
 My 1-page general resume: </a><a href="./Vita.pdf">Vita</a><br>
-Feel free to email me at kartiksr [at] andrew.cmu.edu 
+Feel free to email me at  - <code>kartiksr [at] cs.cmu.edu </code> 
 
+
+<h3>Resources</h3>
+<ul>
+<li>
+<a href = "https://github.com/kartiksrinivas007/NABLA-Automatic-differentiation">A Language built for Automatic Differentiation</a> 
+</li>
+<li>
+    <a href = "https://github.com/kartiksrinivas007/CS5660-Optimization">Accelerating Stochastic Mirror Descent </a>
+</li>
+</ul>
 
 </body></html>
