--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I am a first year master's student in the <a href = "https://www.ml.cmu.edu/"> M
 Previously, I was a student at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>. 
 <br>
 <br>
-My 1-page general resume: </a><a href="./Vita.pdf">Vita</a><br>
+My resume: </a><a href="./Resume.pdf">Vita</a><br>
 Feel free to email me at  - <code>kartiksr [at] cs.cmu.edu </code> 
 
 
