--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@ Previously, I was a student at <a href = "https://www.iith.ac.in/">IIT Hyderabad
 My resume: </a><a href="./Resume.pdf">Vita</a><br>
 Feel free to email me at  - <code>kartiksr [at] cs.cmu.edu </code> 
 
-
-<h3>Resources</h3>
+<h3>Interests</h3>
+During my undergrad, I took an interest in applied math and computer science.
+Other than my primary coursework, I took courses in pure mathematics and physics as electives, some of which include 
+Real & Complex Analysis, <a href= "https://people.iith.ac.in/rogers/combinatorics_and_computing/combinatorics_and_computing.htm"> Probabilistic Combinatorics </a>,  Classical Mechanics, Fluid Mechanics and Thermodynamics.
+<h3> Some Projects</h3>
 <ul>
 <li>
 <a href = "https://github.com/kartiksrinivas007/NABLA-Automatic-differentiation">A Language built for Automatic Differentiation</a> 
