--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ I am a Master's student in the <a href = "https://www.ml.cmu.edu/">Machine Learn
 University. I am interested in machine learning and quantitave finance.
 <br>
 <br>
-Before joining Carnegie Mellon, I was an undergrad at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>, studying computer science, mathematics &  phyics.
+Before joining Carnegie Mellon, I was an undergrad at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>, studying
+computer science, mathematics &  physics.
 As part of my honors thesis, I worked on user-privacy and Machine Unlearning methods in the context of distributional shift under the guidance of <a href = "https://people.iith.ac.in/vineethnb/index.html">Dr. Vineeth N Balasubramanian</a>
 <br>
 <br>
