Addd updated resume

--- a/index.html
+++ b/index.html
@@ -49,27 +49,20 @@ University. I am interested in machine learning and quantitave finance.
 <br>
 Before joining Carnegie Mellon, I was an undergrad at <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>, studying
 computer science, mathematics &  physics.
-As part of my honors thesis, I worked on user-privacy and Machine Unlearning methods in the context of distributional shift under the guidance of <a href = "https://people.iith.ac.in/vineethnb/index.html">Dr. Vineeth N Balasubramanian</a>
+I graduated as the Institute Silver Medalist from IIT Hyderabad in July 2024.
 <br>
 <br>
-I also spent 4 wonderful months at the <a href = "https://tea.ece.ubc.ca/">UBC-TEA lab</a> and Vector Institute for AI, where I
-worked on Federated Learning and Optimization under <a href = "https://xxlya.github.io/">Dr.Xiaoxiao Li</a>. 
-<br>
-Shortly after this,  I graduated as the Institute Silver Medalist from IIT Hyderabad in July 2024.
-
-<br>
-<br>
-My resume: </a><a href="./Resume.pdf">Vita</a><br>
+My resume: </a><a href="./Resume_one_page.pdf">Resume</a><br>
 Feel free to email me at  - <code>kartiksr [at] cs.cmu.edu </code> 
 
-<h3>Interests</h3>
+<h3>Interest & Coursework</h3>
 I take an interest in applied math and computer science.
-Other than my primary coursework, I took courses in pure mathematics and physics as electives, some of which include 
-Real & Complex Analysis, <a href= "https://people.iith.ac.in/rogers/combinatorics_and_computing/combinatorics_and_computing.htm"> Probabilistic Combinatorics </a>,  Classical Mechanics, Fluid Mechanics and Thermodynamics.
+Other than my primary coursework in CS, I also took courses in pure mathematics and physics as electives, some of which include 
+Real & Complex Analysis, <a href= "https://people.iith.ac.in/rogers/combinatorics_and_computing/combinatorics_and_computing.htm">Probabilistic Combinatorics </a>,  Classical Mechanics, Fluid Mechanics and Thermodynamics.
 <br>
 Under the umbrella of Machine Learning, I take an interest in Optimization and Robust, privacy preserving ML.
 
-<h3> Some Projects</h3>
+<h3> Some Undergrad Projects</h3>
 <ul>
 <li>
 <a href = "https://github.com/kartiksrinivas007/NABLA-Automatic-differentiation">A Language built for Automatic Differentiation</a> 
