--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		margin: 40px auto;
 		max-width: 700px;
 		line-height: 1.6;
-		font: 18px/1.5 Hack,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+		font: 18px/1.5 Hack, monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 		color: #444;
 		padding: 0 10px
@@ -23,15 +23,15 @@
 	@media (prefers-color-scheme: dark) {
 		body {
 			color: #c9d1d9;
-			background: #0d1117
+			background: #000
 		}
 
 		a:link {
-			color: #58a6ff
+			color: #FFED29 
 		}
 
 		a:visited {
-			color: #8e96f0
+			color: #FFED29
 		}
 	}
 </style></head>
@@ -42,7 +42,6 @@
 <!-- This style is copied from https://perfectmotherfuckingwebsite.com/      -->
 
 <body><h1>Kartik Srinivas</h1>
-
 I am a Master's student in the <a href = "https://www.ml.cmu.edu/">Machine Learning Department</a> at Carnegie Mellon
 University. I am interested in machine learning and quantitave finance.
 <br>
