--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		line-height: 1.6;
 		font: 18px/1.5 Hack, monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-		color: #444;
+		color: #111;
 		padding: 0 10px
 	}
 
@@ -22,7 +22,7 @@
 
 	@media (prefers-color-scheme: dark) {
 		body {
-			color: #c9d1d9;
+			color: #FFF;
 			background: #000
 		}
 
@@ -42,7 +42,7 @@
 <!-- This style is copied from https://perfectmotherfuckingwebsite.com/      -->
 
 <body><h1>Kartik Srinivas</h1>
-I am a Master's student in the <a href = "https://www.ml.cmu.edu/">Machine Learning Department</a> at Carnegie Mellon
+<!--I am a Master's student in the <a href = "https://www.ml.cmu.edu/">Machine Learning Department</a> at Carnegie Mellon
 University. I am interested in machine learning and quantitave finance.
 <br>
 <br>
@@ -70,5 +70,14 @@ Under the umbrella of Machine Learning, I take an interest in Optimization and R
     <a href = "https://github.com/kartiksrinivas007/CS5660-Optimization">Accelerating Stochastic Mirror Descent </a>
 </li>
 </ul>
+-->
+Machine Learning @ <a href = "https://www.ml.cmu.edu/">CMU</a>
+<br>
+kartiksr [at] cs.cmu.edu
 
+<ul>
+    <li> <a href = "./about.html">About</a></li>
+    <li> <a href = "./publications.html">Publications</a></li>
+    <li> <a href = "./blog.html">Blog</a></li>
+</ul>
 </body></html>
