--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		margin: 40px auto;
 		max-width: 700px;
 		line-height: 1.6;
-		font: 18px/1.5 Hack, monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+		font: 18px/1.5  monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 		color: #111;
 		padding: 0 10px
