--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Kartik Srinivas Personal Website.">
-<title>Kartik Srinivas • Personal Website</title><style>
-	body {
-		margin: 40px auto;
-		max-width: 700px;
-		line-height: 1.6;
-		font: 18px/1.5  monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
-		color: #111;
-		padding: 0 10px
-	}
-
-	h1,
-	h2,
-	h3 {
-		line-height: 1.2
-	}
-
-	@media (prefers-color-scheme: dark) {
-		body {
-			color: #FFF;
-			background: #000
-		}
-
-		a:link {
-			color: #FFED29 
-		}
-
-		a:visited {
-			color: #FFED29
-		}
-	}
-</style></head>
+<title>Kartik Srinivas • Personal Website</title>
+<link rel="stylesheet" href="style.css">
+</head>
 
 
 
