--- a/about.html
+++ b/about.html
@@ -36,13 +36,12 @@ Kartik Srinivas
 <a href = "./about.html">About</a>
 </li>
 <li>
-<a href = "./publications.html">Publications</a>
+<a href = "./publications.html">My work</a>
 </li>
 <li>
 <a href = "./blog.html">Blog</a>
 </li>
 </ul>
-<p>I am a Master’s student at CMU in the Machine Learning Department. Prior, I double majored in Computer Science and Engineering Sciences - (Electrical Engineering, Mathematics &amp; Physics) and graduated with Honors in CS, a Minor in Stat-ML and an Institute Silver Medal from <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>.</p>
-<p>In a past life, I played college basketball and swam for my school. I was born by the beaches in <a href = "https://en.wikipedia.org/wiki/Varkala">Varkala</a>.</p>
+<p>I am a Master’s student at CMU in the Machine Learning Department. Prior, studied Computer Science and Engineering Sciences - (Electrical Engineering, Mathematics &amp; Physics) and graduated with Honors in Computer Science, a Minor in Stat-ML and an Institute Silver Medal from <a href = "https://www.iith.ac.in/">IIT Hyderabad</a>.</p>
 </body>
 </html>
