--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@ Kartik Srinivas
 <a href = "./about.html">About</a>
 </li>
 <li>
-<a href = "./publications.html">Publications</a>
+<a href = "./publications.html">My work</a>
 </li>
 <li>
 <a href = "./blog.html">Blog</a>
@@ -45,7 +45,6 @@ Kartik Srinivas
 <p>Nothing here yet, working on it … :)</p>
 <ul>
 <li>
-(Natural Gradents &amp; Mirror Descent)
 </li>
 </ul>
 </body>
