--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ kartiksr [at] cs.cmu.edu
 
 <ul>
     <li> <a href = "./about.html">About</a></li>
-    <li> <a href = "./publications.html">Publications</a></li>
+    <li> <a href = "./publications.html">My work</a></li>
     <li> <a href = "./blog.html">Blog</a></li>
 </ul>
 </body></html>
