--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,7 @@
     ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="style.css" />
+  <script src="/usr/share/javascript/mathjax/tex-mml-chtml.js" type="text/javascript"></script>
       <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         jax: ["input/TeX", "output/HTML-CSS"],
@@ -36,13 +37,21 @@ Kartik Srinivas
 <a href = "./about.html">About</a>
 </li>
 <li>
-<a href = "./publications.html">Publications</a>
+<a href = "./publications.html">My work</a>
 </li>
 <li>
 <a href = "./blog.html">Blog</a>
 </li>
 </ul>
-<p><b>Overcoming data and model heterogeneities in Decentralized Federated Learning via Synthetic Anchors </b> <br> CY Huang, <u>Kartik Srinivas</u>, Xin Zhang, Xiaoxiao Li <br>(ICML 2024)</p>
-<p>Hopefully more to come! :)</p>
+<p><b><u>Published work</u></b></p>
+<p><b>Overcoming data and model heterogeneities in Decentralized Federated Learning via Synthetic Anchors </b> <br> CY Huang, <u>Kartik Srinivas</u>, Xin Zhang, Xiaoxiao Li <br><a href = "https://proceedings.mlr.press/v235/huang24v.html">(ICML 2024)</a></p>
+<p><b> <u>A broad “research” goal</b></u> <br></p>
+<p>Let us imagine what we want a “super-intelligence” <span class="math inline">\(S\)</span> to do in the future.</p>
+<p>We want the following things</p>
+<ul>
+<li><span class="math inline">\(S\)</span>, which happens to learn from your private data, should also be able to forget it on demand</li>
+<li><span class="math inline">\(S\)</span> should be super, i.e. it should be able to do things you can’t. For example generating amazing art, making accurate predictions about the future, all while utilizing reasonable amounts of energy and memorizing a reasonable amount of information.</li>
+<li><span class="math inline">\(S\)</span> should be fair &amp; unbiased, and should understand the moral principles that humans wish to uphold.</li>
+</ul>
 </body>
 </html>
